--- a/spa_react/index.html
+++ b/spa_react/index.html
@@ -3,17 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon"
-        type="image/svg+xml" />
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0" />
-  <title>PlannerP</title>
+  <link rel="icon" type="image/svg+xml" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PlanerP</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module"
-          src="/src/main.tsx"></script>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
